chore: add storysource and a11y

--- a/.storybook/manager-head.html
+++ b/.storybook/manager-head.html
@@ -2,4 +2,12 @@
   body[class="dark"] > #root [data-is-storybook="true"] {
     background-color: #1b1c1d;
   }
+
+  .prismjs * .token {
+    font-family: "Consolas" !important;
+  }
+
+  .react-syntax-highlighter-line-number::before {
+    font-family: "Consolas" !important;
+  }
 </style>
